[package]
name = "gd32vf103xx-hal"
version = "0.5.0"
authors = ["The RISC-V Team <risc-v@teams.rust-embedded.org>"]
repository = "https://github.com/riscv-rust/gd32vf103xx-hal"
categories = ["embedded", "hardware-support", "no-std"]
description = "HAL for GD32VF103 microcontrollers"
keywords = ["riscv", "gd32", "hal"]
license = "ISC"
edition = "2018"

[dependencies]
bare-metal = "0.2.5"
riscv = "0.10.1"
nb = "1.0.0"
void = { version = "1.0.2", default-features = false }
cast = { version = "0.3.0", default-features = false }
vcell = "0.1.2"
embedded-dma = "0.2.0"

[dependencies.embedded-storage]
version = "0.3.0"
optional = true

[dependencies.embedded-hal]
version = "0.2.7"
features = ["unproven"]

[dependencies.gd32vf103-pac]
git = "https://github.com/katyo/gd32vf103-pac"
branch = "upcoming"

[dependencies.synopsys-usb-otg]
git = "https://github.com/katyo/synopsys-usb-otg"
branch = "gd32v-ng-cs"
features = ["fs"]
optional = true

[features]
default = []
usb_fs = ["synopsys-usb-otg"]
