[package]
name = "gd32vf103xx-hal"
version = "0.5.0"
authors = ["The RISC-V Team <risc-v@teams.rust-embedded.org>"]
repository = "https://github.com/riscv-rust/gd32vf103xx-hal"
categories = ["embedded", "hardware-support", "no-std"]
description = "HAL for GD32VF103 microcontrollers"
keywords = ["riscv", "gd32", "hal"]
license = "ISC"
edition = "2018"

[dependencies]
riscv = "0.10.1"
nb = "0.1.2"
void = { version = "1.0.2", default-features = false }
cast = { version = "0.2.3", default-features = false }
vcell = "0.1.2"
embedded-dma = "0.1.2"
critical-section = "1.1.0"
usb-device = "0.2.9"

[dependencies.gd32vf103-pac]
version = "0.5.0"
features = ["critical-section"]

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]

[features]
rt = ["gd32vf103-pac/rt"]
