[package]
name = "gd32vf103xx-hal"
version = "0.5.0"
authors = ["The RISC-V Team <risc-v@teams.rust-embedded.org>"]
repository = "https://github.com/riscv-rust/gd32vf103xx-hal"
categories = ["embedded", "hardware-support", "no-std"]
description = "HAL for GD32VF103 microcontrollers"
keywords = ["riscv", "gd32", "hal"]
license = "ISC"
edition = "2018"

[dependencies]
# critical-section only required for doctests
gd32vf103-pac = { version = "0.5.0", features = ["critical-section"] }
riscv = "0.15.0"
nb = "0.1.2"
void = { version = "1.0.2", default-features = false }
cast = { version = "0.2.3", default-features = false }
vcell = "0.1.2"
embedded-dma = "0.1.2"

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]

[features]
rt = ["gd32vf103-pac/rt"]
